Ensures that table data does not go overlong and adds wrapping.

--- a/scss/list.scss
+++ b/scss/list.scss
@@ -4,8 +4,9 @@
 @import "pagination";
 @import "variables";
 
-td.title-column {
-  width: 25rem;
+td {
+  max-width: 20rem;
+  word-wrap: break-spaces;
 }
 
 td.empty-result-set {
